# Learn-and-code

./: .gitignore  BookSystem.cpp  CustomerSearch.cpp  CustomerWallet.cpp  DivisorCounter.cpp  DivisorCounter.h  Employee.cpp  EmployeeManagementSystem.cpp  NumberGuessingGame.cpp  README.md  SubarrayMean.cpp  main.cpp  testDivisorCounter.cpp  tumblrPhotoBlogFetcher.cpp
Chapter2/: MeaningfulNames2.cpp
Chapter2/CountryCodeAssignment/: CountryData.h  main.cpp
Chapter2/MeaningfulNamesAssignment/: guessNumber.py  isArmstrongNumber.py  rollTheDice.py
TodolistAssignment/: Todolist.cpp
atmSimulation/: atm.cpp  atm.h  atmExceptions.h  main.cpp
checkoutSystem/oops/: main.cpp  objectOriented.cpp  order.json
checkoutSystem/procedural/: main.cpp  procedural.cpp
inc/: CommonTypes.h  Config.h  Geocoder.h  GoogleGeocodingAPI.h  IGeocoder.h
newsagg/Client/: CMakeLists.txt  client_main.cpp
newsagg/Client/Http/Inc/: HttpClient.h
newsagg/Client/Http/Src/: HttpClient.cpp
newsagg/Server/: CMakeLists.txt  server_main.cpp
newsagg/Server/Http/Inc/: HttpServer.h
newsagg/Server/Http/Src/: HttpServer.cpp
src/: Gecoder.cpp  GoogleGeocodingAPI.cpp
